kubernetes/mkdocs-cs2/deployment/mkdocs-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mkdocs-cs2
  name: mkdocs-cs2
  namespace: mkdocs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mkdocs-cs2
  template:
    metadata:
      labels:
        app: mkdocs-cs2
    spec:
      containers:
      - image: squidfunk/mkdocs-material:9.6.17
        name: mkdocs
        securityContext:
          runAsNonRoot: true
          runAsUser: 2000
          runAsGroup: 2000
          capabilities:
            drop:
              - ALL
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
          - name: data
            mountPath: /docs
      securityContext:
        fsGroup: 2000
      nodeSelector:
        type: worker
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mkdocs-cs2-data
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mkdocs-cs2
  name: mkdocs-cs2-svc
  namespace: mkdocs
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: mkdocs-cs2
  sessionAffinity: None
  type: ClusterIP
